# Omnyxnet

./: .gitignore  ARCHITECTURE_BLUEPRINT.md  CES_WIRING_COMPLETE.md  CHANGELOG.md  CHANGES.md  CHANGES_SUMMARY.md  CODE_AUDIT_REPORT.md  COMMUNICATIONS_FEATURES_SUMMARY.md  COMPLETE_IMPLEMENTATION.md  COMPLETION_REPORT.md  CONSULTATION_README.md  CONSULTATION_SUMMARY.md  CROSS_DEVICE_TESTING.md  DCDN_SETUP.md  DESKTOP_APP_SETUP.md  DISTRIBUTED_COMPUTE_COMPLETE.md  DISTRIBUTED_COMPUTE_QUICK_START.md  DOCUMENTATION_INDEX.md  Dockerfile.dev  EASY_TEST.md  EXPERT_CONSULTATION.md  FEATURE_TESTING_GUIDE.md  FELDMAN_DKG_IMPLEMENTATION.md  FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LINTING_REPORT.md  MANDATE2_COMPLETION_SUMMARY.md  MANDATE3_FINAL_STATUS.md  MONITORING_SETUP.md  MONOREPO_STRUCTURE.md  Makefile  PHASE1_COMPLETION_SUMMARY.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PORT_CONFIGURATION.md  PRODUCTION_READINESS.md  QUICK_START.md  README.md  README_MONOREPO.md  (+28 more)
Req&design/: IMPLEMENTATION_GUIDE.md  LEGAL.md  PANGEA_ROADMAP.md  PRODUCT_VISION.md  REQUIREMENTS.md  THREAT_MODEL.md
Website/: Pangea-Net-Website-Guide-v2.md  website-design-guide-v2.md
benchmarks/: ces_compression_comparison.json
check_reports/: black.full.txt  cargo_test.txt  mypy.full.txt
demo/: demo_seed.json  requirements.txt  server.py
desktop/: desktop_app.py  desktop_app_kivy.py
docker/: docker-compose.50node-full.yml  docker-compose.50node.yml  docker-compose.5node.yml  docker-compose.gui-test.yml  docker-compose.test.2node.yml  docker-compose.test.yml
docs/: ACHIEVEMENT_SUMMARY.md  ARCHITECTURE.md  AUTOMATED_OPERATIONS.md  BLUEPRINT_IMPLEMENTATION.md  CACHING.md  CES_PHASE1_CHANGES.md  CHANGES.md  CHANGES_SUMMARY.md  CLI_EXECUTION_FLOWS.md  CLI_MATRIX_MULTIPLY.md  COMMUNICATION.md  COMMUNICATIONS_TESTING.md  (+58 more)
rust/: ._target  Cargo.toml  FILE_MANIFEST.md  IMPLEMENTATION_COMPLETE.md  README.md  build.rs  schema.capnp
rust/config/: dcdn.toml
rust/examples/: dcdn_demo.rs  phase1_demo.rs  voice_streaming_demo.rs
rust/src/: ._lib.rs  auto_heal.rs  automated.rs  cache.rs  capabilities.rs  ces.rs  codecs.rs  dht.rs  dkg.rs  download.rs  ffi.rs  file_detector.rs  firewall.rs  go_client.rs  lib.rs  lookup.rs  main.rs  metrics.rs  network.rs  rpc.rs  schema_capnp.rs  storage.rs  store.rs  streaming.rs  types.rs  upload.rs
rust/src/compute/: executor.rs  io_tunnel.rs  metering.rs  mod.rs  sandbox.rs  types.rs  verification.rs
rust/src/dcdn/: IMPLEMENTATION_COMPLETE.md  README.md  config.rs  fec.rs  mod.rs  p2p.rs  storage.rs  transport.rs  types.rs  verifier.rs
rust/tests/: integration_test.rs  phase1_features_test.rs  test_dcdn.rs  test_streaming.rs
services/rust-compute/: Cargo.toml  Dockerfile
services/rust-compute/src/: data_processing.rs  main.rs  metrics.rs
(+251 files in other folders)
