[package]
name = "pangea-rust-node"
version = "0.1.0"
edition = "2021"
authors = [""]
description = "Rust-native high-performance node for Pangea Net"
license = "MIT"

[[bin]]
name = "pangea-rust-node"
path = "src/main.rs"

[lib]
name = "pangea_ces"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.36", features = ["full", "rt-multi-thread", "macros", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"

# Networking - QUIC transport
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"

# libp2p for DHT and discovery
libp2p = { version = "0.54", features = ["kad", "identify", "ping", "noise", "tcp", "yamux", "tokio", "macros"] }

# CES Pipeline
zstd = "0.13"
chacha20poly1305 = { version = "0.10", features = ["std"] }
reed-solomon-erasure = "6.0"
sha2 = "0.10"
blake2 = "0.10"

# Cap'n Proto RPC
capnp = "0.20"
capnp-rpc = "0.20"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# System info and capabilities
sysinfo = "0.29"
cfg-if = "1.0"
libc = "0.2"

# Time and caching
chrono = "0.4"
lru = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
bytes = "1.5"
futures = "0.3"
rand = "0.8"
rayon = "1.8"
hex = "0.4"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Optional, Linux-only io_uring support (feature gated)
tokio-uring = { version = "0.5", optional = true }

# Optional eBPF support (Linux only)
aya = { version = "0.12", optional = true }

[build-dependencies]
capnpc = "0.20"

[features]
default = []
uring = ["tokio-uring"]
ebpf = ["aya"]

[dev-dependencies]
tempfile = "3.10"
